[package]
name = "iou"
version = "0.2.0"
description = "io_uring bindings"
documentation = "https://docs.rs/iou"
repository = "https://github.com/withoutboats/iou"
keywords = ["io_uring", "liburing", "async", "futures"]
license = "MIT OR Apache-2.0"
authors = ["Without Boats <boats@mozilla.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2.0"
nix = "0.16.0"
libc = "0.2.65"
uring-sys = { git="https://github.com/glommer/uring-sys", rev="89c943c935038b121d7aaa042b9ae2219e7b1f8d" }

[dev-dependencies]
semver = "0.9.0"

